--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,4 +4,4 @@ jobs:
         runs-on: windows-latest
         steps:
           - run: pip list
-          - run: pip install -r requirements.txt
+          - run: pip install -r ./requirements.txt
