--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,3 +5,4 @@ jobs:
         steps:
           - run: pip list
           - run: pip install -r ./requirements.txt
+          - run: python smtp_mail.py
