--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,4 +8,4 @@ jobs:
           - run: pip list
           - run: ls
           - run: ls -ltr
-          - run: python .github/workflows/test.py
+          - run: python testing.py
