--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,4 +9,4 @@ jobs:
           - run: ls
           - run: ls -ltr
           - run: pip install -r requirements.txt
-          - run: python testing.py
+          - run: python smtp_mail.py
