--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,3 +10,4 @@ jobs:
           - run: ls -ltr
           - run: pip install -r requirements.txt
           - run: python smtp_mail.py
+          - run: python new123.py
