--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,37 +1,94 @@
-on: push
+#on: push
+#jobs:
+#    first-job:
+#        runs-on: ubuntu-latest
+#        steps:
+#        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#          - uses: actions/checkout@v3
+#          - run: pip list
+#          - run: ls
+#          - run: ls -ltr
+#          - run: pip install -r requirements.txt
+#          - run: python smtp_mail.py
+#          - run: python new123.py
+#
+#    second-job:
+#      runs-on: ubuntu-latest
+#      steps:
+#        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#        - uses: actions/checkout@v3
+#        - run: pip list
+#        - run: ls
+#        - run: ls -ltr
+#        - run: pip install -r requirements.txt
+##        - run: python smtp_mail.py
+#        - run: python new123.py
+#
+#job:
+#    first-job:
+#        runs-on: ubuntu-latest
+#        steps:
+#        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#          - uses: actions/checkout@v3
+#          - run: pip list
+#          - run: ls
+#          - run: ls -ltr
+#          - run: pip install -r requirements.txt
+#          - run: python new123.py
+
+
+name: shared matrix
+on:
+  push:
+  workflow_dispatch:
+
 jobs:
-    first-job:
-        runs-on: ubuntu-latest
-        steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-          - uses: actions/checkout@v3
-          - run: pip list
-          - run: ls
-          - run: ls -ltr
-          - run: pip install -r requirements.txt
-          - run: python smtp_mail.py
-          - run: python new123.py
+  define-matrix:
+    runs-on: ubuntu-latest
 
-    second-job:
-      runs-on: ubuntu-latest
-      steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        - uses: actions/checkout@v3
-        - run: pip list
-        - run: ls
-        - run: ls -ltr
-        - run: pip install -r requirements.txt
-#        - run: python smtp_mail.py
-        - run: python new123.py
+    outputs:
+      colors: ${{ steps.colors.outputs.colors }}
 
-job:
-    first-job:
-        runs-on: ubuntu-latest
-        steps:
-        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-          - uses: actions/checkout@v3
-          - run: pip list
-          - run: ls
-          - run: ls -ltr
-          - run: pip install -r requirements.txt
-          - run: python new123.py
+    steps:
+      - name: Define Colors
+        id: colors
+        run: |
+          echo 'colors=["red", "green", "blue"]' >> "$GITHUB_OUTPUT"
+
+  produce-artifacts:
+    runs-on: ubuntu-latest
+    needs: define-matrix
+    strategy:
+      matrix:
+        color: ${{ fromJSON(needs.define-matrix.outputs.colors) }}
+
+    steps:
+      - name: Define Color
+        env:
+          color: ${{ matrix.color }}
+        run: |
+          echo "$color" > color
+      - name: Produce Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.color }}
+          path: color
+
+  consume-artifacts:
+    runs-on: ubuntu-latest
+    needs:
+    - define-matrix
+    - produce-artifacts
+    strategy:
+      matrix:
+        color: ${{ fromJSON(needs.define-matrix.outputs.colors) }}
+
+    steps:
+    - name: Retrieve Artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ matrix.color }}
+
+    - name: Report Color
+      run: |
+        cat color
